# jackdaw

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.build  README.md  clippy.toml  features.md  jackdaw.yaml.example  justfile  pyproject.toml
.cargo/: config.toml
.ci/: .gitignore  ci.sw copy.yaml  ci.sw.yaml  release.sw.yaml
.ci/catalog/check-artifacts/1.0.0/: check_artifacts.py  function.yaml
.ci/catalog/compute-hashes/1.0.0/: README.md  compute_hashes.py  function.yaml
.github/workflows/: pr.yml  publish-python.yml  release-on-merge.yml  release.yml
docs/vhs/: README.md  cache-debug.tape  cache.sw.yaml  executor-rest.tape  hello-world copy.tape  hello-world-debug.tape  hello-world-validate.tape  hello-world.sw.yaml  hello-world.tape  listener-grpc.tape  listener-openapi.tape  performance-test.sw.yaml  persistence-demo.tape  run-container.tape  run-javascript.tape  run-python.tape
examples/cache/: cache.sw.yaml
examples/catalog/: use-catalog.sw.yaml
examples/container/: container-env-vars.sw.yaml
examples/hello-world/: hello-world.sw.yaml
examples/javascript/: javascript-basics.sw.yaml
examples/javascript-grpc-listener/: Dockerfile  README.md  calculator-api.sw.yaml  deno.json  run.sh
examples/javascript-grpc-listener/src/: add.js  get_pet.js  multiply.js
examples/javascript-openapi-listener/: Dockerfile  README.md  calculator-api.sw.yaml  openapi.spec.yaml  package-lock.json  package.json  run.sh
examples/javascript-openapi-listener/src/: get_pet.js
examples/lib/: event_streaming.rs  simple_workflow.rs
examples/lib/python/: event_streaming.py  simple_workflow.py
examples/nested-workflows/: workflow-a.yaml  workflow-b.yaml  workflow-c.yaml
examples/performance/: performance-test.sw.yaml
examples/persistence/: persistence.sw.yaml
examples/python/: python-basics.sw.yaml
examples/python-grpc-listener/: Dockerfile  README.md  calculator-api.sw.yaml  run.sh  spec.proto
examples/python-grpc-listener/calculator/: get_pet.py  types.py
examples/python-openapi-listener/: Dockerfile  README.md  calculator-api.sw.yaml  openapi.spec.yaml  pyproject.toml  run.sh
examples/python-openapi-listener/calculator/: add.py  get_pet.py  multiply.py  types.py
examples/rest/: rest-api.sw.yaml
src/: builder.rs  cache.rs  config.rs  container.rs  context.rs  descriptors.rs  durableengine.rs  execution_handle.rs  executionhistory.rs  executor.rs  expressions.rs  lib.rs  main.rs  output.rs  persistence.rs  python.rs  task_ext.rs  task_output.rs  workflow.rs  workflow_source.rs
src/cmd/: mod.rs  run.rs  validate.rs  visualize.rs
src/durableengine/: catalog.rs  export.rs  graph.rs  listeners.rs  timeout.rs
src/durableengine/tasks/: call.rs  emit.rs  for_loop.rs  fork.rs  mod.rs  raise.rs  run.rs  switch.rs  try_catch.rs  wait.rs
src/listeners/: grpc.rs  http.rs  mod.rs
src/providers/: mod.rs
src/providers/cache/: mem.rs  mod.rs  postgres.rs  redb.rs  sqlite.rs
src/providers/container/: docker.rs  mod.rs
src/providers/executors/: mod.rs  node.rs  openapi.rs  python.rs  python_ext.rs  rest.rs  typescript.rs  typescript_ext.rs
src/providers/persistence/: mem.rs  mod.rs  postgres.rs  redb.rs  sqlite.rs
src/providers/visualization/: d2.rs  graphviz.rs  mod.rs
tests/: container_tests.rs  ctk_conformance.rs  docker_integration_tests.rs  example_tests.rs  flow_directive_tests.rs  http_redirect_tests.rs  listen_read_modes_tests.rs  listener_tests.rs  nested_workflow_tests.rs  schedule_tests.rs  task_event_tests.rs  timeout_tests.rs  validate_tests.rs  wait_task_tests.rs
tests/common/: mod.rs
tests/example_steps/: mod.rs  run_script.rs
tests/fixtures/: three-stage-test.sw.yaml
tests/fixtures/containers/: container-env-expressions.sw.yaml  container-env-vars.sw.yaml  container-multiple-volumes.sw.yaml  container-stdin-args.sw.yaml  container-volume-write.sw.yaml
tests/fixtures/docker/: README.md  grpc-python-calculator.sw.yaml  grpc-typescript-calculator.sw.yaml  invalid.sw.yaml  javascript-script.sw.yaml  openapi-python-calculator.sw.yaml  openapi-typescript-calculator.sw.yaml  python-script.sw.yaml  simple-echo.sw.yaml  typescript-script.sw.yaml  valid-minimal.sw.yaml
tests/fixtures/listen-read-modes/: test-listen-read-data.sw.yaml  test-listen-read-default.sw.yaml  test-listen-read-envelope.sw.yaml  test-listen-read-raw.sw.yaml
tests/fixtures/nested-workflows/: nested-workflows.feature  workflow-a.yaml  workflow-b.yaml  workflow-c.yaml
tests/fixtures/schedules/: schedule-after-iso8601.sw.yaml  schedule-after-seconds.sw.yaml  schedule-after-with-delay.sw.yaml  schedule-cron-daily-midnight.sw.yaml  schedule-cron-every-5-seconds.sw.yaml  schedule-cron-every-minute.sw.yaml  schedule-event-driven-one.sw.yaml  schedule-every-composite.sw.yaml  schedule-every-iso8601.sw.yaml  schedule-every-milliseconds.sw.yaml  schedule-every-seconds.sw.yaml  schedule-every-with-long-task.sw.yaml  schedule-invalid-cron-expression.sw.yaml  schedule-invalid-multiple-types.sw.yaml  schedule-no-schedule.sw.yaml
tests/fixtures/task-events/: test-event-order.sw.yaml  test-multiple-tasks.sw.yaml  test-retry-attempt.sw.yaml  test-task-created-event.sw.yaml  test-task-retried.sw.yaml  test-task-types.sw.yaml
tests/fixtures/timeout/: nested-timeout-task-overrides.sw.yaml  task-completes-within-timeout.sw.yaml  task-timeout-call.sw.yaml  task-timeout-inline.sw.yaml  task-timeout-iso8601.sw.yaml  timeout-milliseconds.sw.yaml  workflow-completes-within-timeout.sw.yaml  workflow-timeout-inline.sw.yaml  workflow-timeout-iso8601.sw.yaml
tests/fixtures/wait/: wait-in-sequence.sw.yaml  wait-inline-composite.sw.yaml  wait-inline-milliseconds.sw.yaml  wait-inline-seconds.sw.yaml  wait-iso8601-minutes.sw.yaml  wait-iso8601-seconds.sw.yaml  wait-returns-empty.sw.yaml
tests/handlers/: test_handlers.py
tests/listener_steps/: grpc.rs  http.rs  mod.rs  workflow.rs
tests/nested_workflow_steps/: steps.rs
tests/schemas/: webhook.yaml
tests/steps/: branch.rs  do_.rs  flow.rs  mod.rs  raise.rs  switch.rs  try_.rs
(+31 files in other folders)
