[package]
name = "mooose"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.120"
serde_bytes = "=0.11.15"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing-indicatif = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
indicatif-log-bridge = "0.2"
snafu = "0.8.9"
serverless_workflow_core = "1.0.0-alpha6.3"
console = "0.15"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"