[package]
name = "jackdaw"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.120"
serde_bytes = "=0.11.15"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing-indicatif = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
indicatif-log-bridge = "0.2"
snafu = "0.8.9"
serverless_workflow_core = "1.0.0-alpha6.3"
console = "0.15"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
jaq-interpret = "1.2"
jaq-parse = "1.0"
indexmap = "2"
jaq = "2.3.0"
jaq-core = "2.2.1"
jaq-std = "2.1"
jaq-json = { version = "1.1.3", features = ["serde_json"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
axum = "0.7.5"  # Pinned to avoid serde 1.0.228+ which breaks swc_config 3.0.0
base64 = "0.22"

tonic = "0.12"
prost = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
prost-types = "0.13"
protox = "0.7"
tower = "0.4"
http = "1"
http-body-util = "0.1"
openapiv3-extended = { version = "6.0", features = ["v2"] }
redb = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "json", "uuid"] }
reqwest = { version = "0.11", features = ["json"] }

# Python execution with pyo3
# Using abi3 for stable ABI compatibility, avoiding need for specific libpython version
# NOTE: Not using auto-initialize to avoid libpython linking requirement for binaries
pyo3 = { version = "0.22", features = ["abi3-py310"] }

# TypeScript/JavaScript execution with rustyscript (embedded Deno runtime)
rustyscript = "0.12.3"
petgraph = "0.6"
async-recursion = "1.0"
futures = "0.3"

[dev-dependencies]
cucumber = "0.21"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

[[test]]
name = "ctk_conformance"
harness = false

[[test]]
name = "listener_tests"
harness = false

[[test]]
name = "nested_workflow_tests"
harness = false