[package]
name = "jackdaw"
version = "0.1.0"
edition = "2024"
authors = ["Armin Graf"]
description = "A durable, cached, graph-based execution engine for Serverless Workflows"
documentation = "https://docs.rs/jackdaw"
readme = "README.md"
repository = "https://github.com/arminhammer/jackdaw"
license = "MIT OR Apache-2.0"
keywords = ["serverless", "workflow", "engine", "durable", "orchestration"]
categories = ["development-tools", "asynchronous"]

[dependencies]
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.120"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
config = "0.15.15"
tracing-indicatif = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
indicatif-log-bridge = "0.2"
snafu = "0.8.9"
serverless_workflow_core = { git = "https://github.com/serverlessworkflow/sdk-rust.git", rev = "12d7c5b2ef76bc5186f949e3a3d649db6a3f3ba5" }
console = "0.15"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
jaq-interpret = "1.2"
jaq-parse = "1.0"
jaq-core = "2.2.1"
jaq-std = "2.1"
jaq-json = { version = "1.1.3", features = ["serde_json"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
axum = "0.7.5"  # Pinned to avoid serde 1.0.228+ which breaks swc_config 3.0.0
base64 = "0.22"

tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
prost-types = "0.13"
protox = "0.7"
tower = "0.4"
http = "1"
http-body = "1"
http-body-util = "0.1"
openapiv3-extended = { version = "6.0", features = ["v2"] }
redb = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "json", "uuid"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
bollard = "0.18"

petgraph = "0.6"
async-recursion = "1.0"
futures = "0.3"
sha2 = "0.10.9"

[dev-dependencies]
cucumber = "0.21"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
wiremock = "0.6.5"

[[test]]
name = "ctk_conformance"
harness = false

[[test]]
name = "listener_tests"
harness = false

[[test]]
name = "nested_workflow_tests"
harness = false

[[test]]
name = "example_tests"
harness = false

[[test]]
name = "validate_tests"

[[test]]
name = "docker_integration_tests"
required-features = []

[[bin]]
name = "jackdaw"
path = "src/main.rs"
required-features = []

# Optimized release profile for smaller, faster binaries
[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Better optimization, slower compile
strip = true             # Strip symbols from binary
panic = "abort"          # Smaller binary, no unwinding

# Profile for release with debug info (useful for profiling production issues)
[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[lints.clippy]
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"
