[project]
name = "calculator-handlers"
version = "0.1.0"
description = "Python handlers for Calculator service (gRPC and OpenAPI listeners)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["calculator"]
